fixed invisible link

--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -157,6 +157,7 @@ body {
 // MOBILE NAV
 .toggle-nav {
   z-index: 88888888;
+  display: none;
 }
 
 .icon-menu {
