--- a/src/styles/queries.scss
+++ b/src/styles/queries.scss
@@ -224,6 +224,10 @@
     visibility: visible;
   }
 
+  .toggle-nav {
+    display: block;
+  }
+
   .icon-menu[name='menu-outline'] {
     display: block;
   }
